--- a/.forceignore
+++ b/.forceignore
@@ -37,8 +37,38 @@ force-app/main/default/profiles/Custom%3A Support Profile.profile-meta.xml
 force-app/main/default/staticresources/SiteSamples.resource-meta.xml
 
 # Pages to ignore
-SiteRegister.page
-SiteRegister.page-meta.xml
+force-app/main/default/pages/AnswersHome.page
+force-app/main/default/pages/AnswersHome.page-meta.xml
+force-app/main/default/pages/BandwidthExceeded.page
+force-app/main/default/pages/BandwidthExceeded.page-meta.xml
+force-app/main/default/pages/ChangePassword.page
+force-app/main/default/pages/ChangePassword.page-meta.xml
+force-app/main/default/pages/Exception.page
+force-app/main/default/pages/Exception.page-meta.xml
+force-app/main/default/pages/FileNotFound.page
+force-app/main/default/pages/FileNotFound.page-meta.xml
+force-app/main/default/pages/ForgotPassword.page
+force-app/main/default/pages/ForgotPassword.page-meta.xml
+force-app/main/default/pages/ForgotPasswordConfirm.page
+force-app/main/default/pages/ForgotPasswordConfirm.page-meta.xml
+force-app/main/default/pages/IdeasHome.page
+force-app/main/default/pages/IdeasHome.page-meta.xml
+force-app/main/default/pages/InMaintenance.page
+force-app/main/default/pages/InMaintenance.page-meta.xml
+force-app/main/default/pages/MyProfilePage.page
+force-app/main/default/pages/MyProfilePage.page-meta.xml
+force-app/main/default/pages/SiteRegisterConfirm.page
+force-app/main/default/pages/SiteRegisterConfirm.page-meta.xml
+force-app/main/default/pages/SiteTemplate.page
+force-app/main/default/pages/SiteTemplate.page-meta.xml
+force-app/main/default/pages/StdExceptionTemplate.page
+force-app/main/default/pages/StdExceptionTemplate.page-meta.xml
+force-app/main/default/pages/Unauthorized.page
+force-app/main/default/pages/Unauthorized.page-meta.xml
+force-app/main/default/pages/UnderConstruction.page
+force-app/main/default/pages/UnderConstruction.page
+force-app/main/default/pages/SiteRegister.page
+force-app/main/default/pages/SiteRegister.page-meta.xml
 force-app/main/default/pages/SiteLogin.page
 force-app/main/default/pages/SiteLogin.page-meta.xml
 
