meta data updated from scrath org, not sure this is goood or not. Added namespace to cumulusci.yml. Added class for getting namespace

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -3,6 +3,7 @@ project:
     name: USTEventsDX
     package:
         name:  USTEventsDX
+        namespace:  ustevent
         api_version: '46.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/EDA'
