Still battling force ignore. Trying to elimate profile pull-down

--- a/.forceignore
+++ b/.forceignore
@@ -86,13 +86,15 @@ force-app/main/default/classes/ForgotPasswordController.cls
 
 #EDA things to ignore
 Account
-Contact.compactLayouts.hed__*
+Contact.compactLayouts.hed__**
 Contact.Primary_Academic_Program__c
 Contact.Primary_Department__c
 Contact.Primary_Educational_Institution__c
 Contact.Primary_Sports_Organization__c
-Contact.hed__*
-Profile
+Contact.hed__**
+force-app/main/default/profiles/**
+Profiles
+Admin.profile
 
 
 # LWC configuration files
