--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -10,6 +10,22 @@ project:
 
 tasks:
 
+    deploy_site_config:
+        description: Deploys configuration for Development.
+        class_path: cumulusci.tasks.salesforce.Deploy
+        options:
+            namespace_inject: $project_config.project__package__namespace
+            path: unpackaged/config/site
+            unmanaged: True
+
+    deploy_site_profile:
+        description: Deploys configuration for Development.
+        class_path: cumulusci.tasks.salesforce.Deploy
+        options:
+            namespace_inject: $project_config.project__package__namespace
+            path: unpackaged/config/profile
+            unmanaged: True
+
     deploy_event_records:
         description: Configure sample records for the Event app
         class_path: cumulusci.tasks.apex.anon.AnonymousApexTask
@@ -37,3 +53,10 @@ flows:
         steps:
             3: 
                 task: deploy_event_records
+
+    config_site:
+        steps:
+            1:
+                task: deploy_site_config
+            2:
+                task: deploy_site_profile
