--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -4,7 +4,7 @@ project:
     package:
         name:  SummitEventsDX
         namespace:  ustevent
-        api_version: '46.0'
+        api_version: '47.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/EDA'
     source_format: sfdx
@@ -40,12 +40,12 @@ tasks:
             path: scripts/configure_event_settings.cls
             apex: setGuestPermissionSet();
 
-    deploy_event_records:
+    deploy_dev_event_records:
         description: Configure sample records for the Event app
-        class_path: cumulusci.tasks.apex.anon.AnonymousApexTask
+        class_path: cumulusci.tasks.bulkdata.load.LoadData
         options:
-            path: scripts/configure_event_settings.cls
-            apex: initializeEventSampleData();
+            mapping: datasets/dev/mapping.yml
+            sql_path: datasets/dev/data.sql
 
     robot:
         options:
@@ -66,7 +66,7 @@ flows:
     config_dev:
         steps:
             3: 
-                task: deploy_event_records
+                task: deploy_dev_event_records
             4:
                 task: deploy_permission_set
 
