--- a/datasets/old/mapping.yml
+++ b/datasets/old/mapping.yml
@@ -1,3 +1,9 @@
+Insert hed__Language__c:
+  sf_object: hed__Language__c
+  table: hed__Language__c
+  fields:
+    Id: sf_id
+    Name: Name
 Insert Summit_Events_Fee_Attribute__c:
   sf_object: Summit_Events_Fee_Attribute__c
   table: Summit_Events_Fee_Attribute__c
@@ -6,12 +12,6 @@ Insert Summit_Events_Fee_Attribute__c:
     Name: Name
     Banner_Index__c: Banner_Index__c
     FOAPAL__c: FOAPAL__c
-Insert hed__Language__c:
-  sf_object: hed__Language__c
-  table: hed__Language__c
-  fields:
-    Id: sf_id
-    Name: Name
 Insert Summit_Events__c:
   sf_object: Summit_Events__c
   table: Summit_Events__c
@@ -38,24 +38,19 @@ Insert Summit_Events__c:
     Add_Info_Question_Type_5__c: Add_Info_Question_Type_5__c
     Allow_Other_Attendees__c: Allow_Other_Attendees__c
     Alternate_Registration_URL__c: Alternate_Registration_URL__c
-    Ask_Applicant_Type__c: Ask_Applicant_Type__c
+    Applicant_Type__c: Applicant_Type__c
     Ask_Date_Of_Birth__c: Ask_Date_Of_Birth__c
     Ask_Gender__c: Ask_Gender__c
     Ask_If_Parent__c: Ask_If_Parent__c
-    Ask_Last_Name_As_Student__c: Ask_Last_Name_As_Student__c
     Ask_Mailing_Address__c: Ask_Mailing_Address__c
     Ask_Phone__c: Ask_Phone__c
-    Ask_Preferred_Class_Year__c: Ask_Preferred_Class_Year__c
-    Ask_Preferred_First_Name__c: Ask_Preferred_First_Name__c
+    Ask_Program_Interest__c: Ask_Program_Interest__c
     Ask_Registrant_Program_Of_Interest__c: Ask_Registrant_Program_Of_Interest__c
-    Ask_Relationship_To_Institution__c: Ask_Relationship_To_Institution__c
-    Ask_Third_Party_Registrant__c: Ask_Third_Party_Registrant__c
     Audience__c: Audience__c
     Building__c: Building__c
     Close_Event_Days_Before__c: Close_Event_Days_Before__c
     College_High_School_Ask__c: College_High_School_Ask__c
     Contact_Creation__c: Contact_Creation__c
-    Contact_Matching_Rules__c: Contact_Matching_Rules__c
     Display_Optional_Donation__c: Display_Optional_Donation__c
     Donation_Description__c: Donation_Description__c
     Donation_Suggested_Amount_List__c: Donation_Suggested_Amount_List__c
@@ -89,10 +84,12 @@ Insert Summit_Events__c:
     Location_Title__c: Location_Title__c
     Location_Type__c: Location_Type__c
     Max_Other_Attendees__c: Max_Other_Attendees__c
+    Portal_Login_Required__c: Portal_Login_Required__c
     Private_Event__c: Private_Event__c
     Program_Filter_2__c: Program_Filter_2__c
     Program_Filter_3__c: Program_Filter_3__c
     Program_Filter__c: Program_Filter__c
+    RecordTypeId: RecordTypeId
     Start_Date__c: Start_Date__c
     Template__c: Template__c
     Tracking_Cancel_Registration__c: Tracking_Cancel_Registration__c
@@ -115,6 +112,37 @@ Insert Summit_Events__c:
       table: Summit_Events_Fee_Attribute__c
     Event_Fee_Attribute__c:
       table: Summit_Events_Fee_Attribute__c
+Insert Summit_Events_Instance__c:
+  sf_object: Summit_Events_Instance__c
+  table: Summit_Events_Instance__c
+  fields:
+    Id: sf_id
+    Active_Status__c: Active_Status__c
+    Alternate_Registration_URL_Override__c: Alternate_Registration_URL_Override__c
+    Attendee_List__c: Attendee_List__c
+    Banner_Event_Code__c: Banner_Event_Code__c
+    Banner_Event_Function_Code__c: Banner_Event_Function_Code__c
+    Building_Override__c: Building_Override__c
+    Capacity__c: Capacity__c
+    Category__c: Category__c
+    End_Date_Time__c: End_Date_Time__c
+    Event_Instance_Fee_Additional__c: Event_Instance_Fee_Additional__c
+    Event_Instance_Fee__c: Event_Instance_Fee__c
+    Feed_Registration_Button_Text_Override__c: Feed_Registration_Button_Text_Override__c
+    Instance_Short_Description__c: Instance_Short_Description__c
+    Instance_Title__c: Instance_Title__c
+    Location_Address_Override__c: Location_Address_Override__c
+    Location_Map_Link_Override__c: Location_Map_Link_Override__c
+    Location_Title_Override__c: Location_Title_Override__c
+    Location_Type_Override__c: Location_Type_Override__c
+    Start_Date_Time__c: Start_Date_Time__c
+  lookups:
+    Event_Instance_Fee_Additional_Attribute__c:
+      table: Summit_Events_Fee_Attribute__c
+    Event_Instance_Fee_Attribute__c:
+      table: Summit_Events_Fee_Attribute__c
+    Event__c:
+      table: Summit_Events__c
 Insert Summit_Events_Email__c:
   sf_object: Summit_Events_Email__c
   table: Summit_Events_Email__c
@@ -147,38 +175,6 @@ Insert Summit_Events_Appointment_Type_Group__c:
     Choosable_Appointment_Amount__c: Choosable_Appointment_Amount__c
   lookups:
     Summit_Events__c:
-      table: Summit_Events__c
-Insert Summit_Events_Instance__c:
-  sf_object: Summit_Events_Instance__c
-  table: Summit_Events_Instance__c
-  fields:
-    Id: sf_id
-    Active_Status__c: Active_Status__c
-    Alternate_Registration_URL_Override__c: Alternate_Registration_URL_Override__c
-    Attendee_List__c: Attendee_List__c
-    Banner_Event_Code__c: Banner_Event_Code__c
-    Banner_Event_Function_Code__c: Banner_Event_Function_Code__c
-    Building_Override__c: Building_Override__c
-    Capacity__c: Capacity__c
-    Category__c: Category__c
-    End_Date_Time__c: End_Date_Time__c
-    Event_Fee_Additional_Override__c: Event_Fee_Additional_Override__c
-    Event_Fee_Override__c: Event_Fee_Override__c
-    Feed_Registration_Button_Text_Override__c: Feed_Registration_Button_Text_Override__c
-    Instance_Short_Description__c: Instance_Short_Description__c
-    Instance_Title__c: Instance_Title__c
-    Location_Address_Override__c: Location_Address_Override__c
-    Location_Map_Link_Override__c: Location_Map_Link_Override__c
-    Location_Title_Override__c: Location_Title_Override__c
-    Location_Type_Override__c: Location_Type_Override__c
-    Private_Instance__c: Private_Instance__c
-    Start_Date_Time__c: Start_Date_Time__c
-  lookups:
-    Event_Fee_Additional_Attribute_Override__c:
-      table: Summit_Events_Fee_Attribute__c
-    Event_Fee_Attribute_Override__c:
-      table: Summit_Events_Fee_Attribute__c
-    Event__c:
       table: Summit_Events__c
 Insert Summit_Events_Appointment_Type__c:
   sf_object: Summit_Events_Appointment_Type__c
@@ -235,6 +231,21 @@ Insert Account:
     hed__Primary_Contact__c:
       table: Contact
       after: Insert Contact
+Insert hed__Facility__c:
+  sf_object: hed__Facility__c
+  table: hed__Facility__c
+  fields:
+    Id: sf_id
+    Name: Name
+    hed__Capacity__c: hed__Capacity__c
+    hed__Description__c: hed__Description__c
+    hed__Facility_Type__c: hed__Facility_Type__c
+  lookups:
+    hed__Account__c:
+      table: Account
+    hed__Parent_Facility__c:
+      table: hed__Facility__c
+      after: Insert hed__Facility__c
 Insert Contact:
   sf_object: Contact
   table: Contact
@@ -388,7 +399,7 @@ Insert Summit_Events_Registration__c:
     New_Contact_Created__c: New_Contact_Created__c
     Number_of_Guests__c: Number_of_Guests__c
     Participation_Type__c: Participation_Type__c
-    Preferred_Class_Year__c: Preferred_Class_Year__c
+    Preferred_St_Thomas_Class_Year__c: Preferred_St_Thomas_Class_Year__c
     Preferred_Visit_Time__c: Preferred_Visit_Time__c
     Presentation_Location__c: Presentation_Location__c
     Presentation_Time__c: Presentation_Time__c
@@ -419,6 +430,7 @@ Insert Summit_Events_Registration__c:
     Registrant_Parent_First_Name__c: Registrant_Parent_First_Name__c
     Registrant_Parent_Last_Name__c: Registrant_Parent_Last_Name__c
     Registrant_Parent_Phone__c: Registrant_Parent_Phone__c
+    Registrant_Parent_Status__c: Registrant_Parent_Status__c
     Registrant_Phone__c: Registrant_Phone__c
     Registrant_Postal_Code__c: Registrant_Postal_Code__c
     Registrant_Preferred_First_Name__c: Registrant_Preferred_First_Name__c
@@ -429,9 +441,8 @@ Insert Summit_Events_Registration__c:
     Registrant_State__c: Registrant_State__c
     Registrant_Street_1__c: Registrant_Street_1__c
     Registrant_Street_2__c: Registrant_Street_2__c
-    Registrant_Third_Party_Status__c: Registrant_Third_Party_Status__c
     Registrant_Zip__c: Registrant_Zip__c
-    Relationship_To_Institution__c: Relationship_To_Institution__c
+    Relationship_to_St_Thomas__c: Relationship_to_St_Thomas__c
     Reminder_Call_Complete__c: Reminder_Call_Complete__c
     Session__c: Session__c
     Status__c: Status__c
@@ -500,6 +511,7 @@ Insert Summit_Events_Appointments__c:
     Description__c: Description__c
     Do_Not_Show_Time__c: Do_Not_Show_Time__c
     Faculty_Staff_Member__c: Faculty_Staff_Member__c
+    RecordTypeId: RecordTypeId
     Registrant_Input__c: Registrant_Input__c
     Room__c: Room__c
     Sort_Order__c: Sort_Order__c
@@ -516,8 +528,8 @@ Insert Summit_Events_Fee__c:
   fields:
     Id: sf_id
     Description__c: Description__c
-    Event_Fee_Type__c: Event_Fee_Type__c
     Event_Fee__c: Event_Fee__c
+    Fee_Type__c: Fee_Type__c
   lookups:
     Event_Appointment_Type__c:
       table: Summit_Events_Appointment_Type__c
