--- a/datasets/mapping.yml
+++ b/datasets/mapping.yml
@@ -1,9 +1,3 @@
-Insert hed__Language__c:
-  sf_object: hed__Language__c
-  table: hed__Language__c
-  fields:
-    Id: sf_id
-    Name: Name
 Insert Summit_Events__c:
   sf_object: Summit_Events__c
   table: Summit_Events__c
@@ -30,19 +24,24 @@ Insert Summit_Events__c:
     Add_Info_Question_Type_5__c: Add_Info_Question_Type_5__c
     Allow_Other_Attendees__c: Allow_Other_Attendees__c
     Alternate_Registration_URL__c: Alternate_Registration_URL__c
-    Applicant_Type__c: Applicant_Type__c
+    Ask_Applicant_Type__c: Ask_Applicant_Type__c
     Ask_Date_Of_Birth__c: Ask_Date_Of_Birth__c
     Ask_Gender__c: Ask_Gender__c
     Ask_If_Parent__c: Ask_If_Parent__c
+    Ask_Last_Name_As_Student__c: Ask_Last_Name_As_Student__c
     Ask_Mailing_Address__c: Ask_Mailing_Address__c
     Ask_Phone__c: Ask_Phone__c
-    Ask_Program_Interest__c: Ask_Program_Interest__c
+    Ask_Preferred_Class_Year__c: Ask_Preferred_Class_Year__c
+    Ask_Preferred_First_Name__c: Ask_Preferred_First_Name__c
     Ask_Registrant_Program_Of_Interest__c: Ask_Registrant_Program_Of_Interest__c
+    Ask_Relationship_To_Institution__c: Ask_Relationship_To_Institution__c
+    Ask_Third_Party_Registrant__c: Ask_Third_Party_Registrant__c
     Audience__c: Audience__c
     Building__c: Building__c
     Close_Event_Days_Before__c: Close_Event_Days_Before__c
     College_High_School_Ask__c: College_High_School_Ask__c
     Contact_Creation__c: Contact_Creation__c
+    Contact_Matching_Rules__c: Contact_Matching_Rules__c
     End_Date__c: End_Date__c
     Event_Appointment_Description__c: Event_Appointment_Description__c
     Event_Appointment_Title__c: Event_Appointment_Title__c
@@ -71,12 +70,11 @@ Insert Summit_Events__c:
     Location_Title__c: Location_Title__c
     Location_Type__c: Location_Type__c
     Max_Other_Attendees__c: Max_Other_Attendees__c
-    Portal_Login_Required__c: Portal_Login_Required__c
     Private_Event__c: Private_Event__c
     Program_Filter_2__c: Program_Filter_2__c
     Program_Filter_3__c: Program_Filter_3__c
     Program_Filter__c: Program_Filter__c
-    RecordTypeId: RecordTypeId
+    Registration_Email_Restriction__c: Registration_Email_Restriction__c
     Start_Date__c: Start_Date__c
     Template__c: Template__c
     Tracking_Cancel_Registration__c: Tracking_Cancel_Registration__c
@@ -84,6 +82,12 @@ Insert Summit_Events__c:
     Tracking_Event_Registration__c: Tracking_Event_Registration__c
     Tracking_Options_Registration__c: Tracking_Options_Registration__c
     Tracking_Submit_Registration__c: Tracking_Submit_Registration__c
+Insert hed__Language__c:
+  sf_object: hed__Language__c
+  table: hed__Language__c
+  fields:
+    Id: sf_id
+    Name: Name
 Insert Summit_Events_Email__c:
   sf_object: Summit_Events_Email__c
   table: Summit_Events_Email__c
@@ -118,15 +122,19 @@ Insert Summit_Events_Instance__c:
     Building_Override__c: Building_Override__c
     Capacity__c: Capacity__c
     Category__c: Category__c
-    End_Date_Time__c: End_Date_Time__c
     Feed_Registration_Button_Text_Override__c: Feed_Registration_Button_Text_Override__c
+    Instance_End_Date__c: Instance_End_Date__c
+    Instance_End_Time__c: Instance_End_Time__c
     Instance_Short_Description__c: Instance_Short_Description__c
+    Instance_Start_Date__c: Instance_Start_Date__c
+    Instance_Start_Time__c: Instance_Start_Time__c
+    Instance_Time_Zone__c: Instance_Time_Zone__c
     Instance_Title__c: Instance_Title__c
     Location_Address_Override__c: Location_Address_Override__c
     Location_Map_Link_Override__c: Location_Map_Link_Override__c
     Location_Title_Override__c: Location_Title_Override__c
     Location_Type_Override__c: Location_Type_Override__c
-    Start_Date_Time__c: Start_Date_Time__c
+    Private_Instance__c: Private_Instance__c
   lookups:
     Event__c:
       table: Summit_Events__c
@@ -175,6 +183,21 @@ Insert Account:
     hed__Primary_Contact__c:
       table: Contact
       after: Insert Contact
+Insert hed__Facility__c:
+  sf_object: hed__Facility__c
+  table: hed__Facility__c
+  fields:
+    Id: sf_id
+    Name: Name
+    hed__Capacity__c: hed__Capacity__c
+    hed__Description__c: hed__Description__c
+    hed__Facility_Type__c: hed__Facility_Type__c
+  lookups:
+    hed__Account__c:
+      table: Account
+    hed__Parent_Facility__c:
+      table: hed__Facility__c
+      after: Insert hed__Facility__c
 Insert Contact:
   sf_object: Contact
   table: Contact
@@ -250,6 +273,56 @@ Insert Contact:
       table: hed__Language__c
     hed__Primary_Organization__c:
       table: Account
+Insert hed__Address__c:
+  sf_object: hed__Address__c
+  table: hed__Address__c
+  fields:
+    Id: sf_id
+    hed__Address_Type__c: hed__Address_Type__c
+    hed__Default_Address__c: hed__Default_Address__c
+    hed__Latest_End_Date__c: hed__Latest_End_Date__c
+    hed__Latest_Start_Date__c: hed__Latest_Start_Date__c
+    hed__MailingCity__c: hed__MailingCity__c
+    hed__MailingCountry__c: hed__MailingCountry__c
+    hed__MailingPostalCode__c: hed__MailingPostalCode__c
+    hed__MailingState__c: hed__MailingState__c
+    hed__MailingStreet2__c: hed__MailingStreet2__c
+    hed__MailingStreet__c: hed__MailingStreet__c
+    hed__Seasonal_End_Day__c: hed__Seasonal_End_Day__c
+    hed__Seasonal_End_Month__c: hed__Seasonal_End_Month__c
+    hed__Seasonal_End_Year__c: hed__Seasonal_End_Year__c
+    hed__Seasonal_Start_Day__c: hed__Seasonal_Start_Day__c
+    hed__Seasonal_Start_Month__c: hed__Seasonal_Start_Month__c
+    hed__Seasonal_Start_Year__c: hed__Seasonal_Start_Year__c
+  lookups:
+    hed__Parent_Account__c:
+      table: Account
+    hed__Parent_Contact__c:
+      table: Contact
+Insert Summit_Events_Host__c:
+  sf_object: Summit_Events_Host__c
+  table: Summit_Events_Host__c
+  fields:
+    Id: sf_id
+    Additional_Comments__c: Additional_Comments__c
+    Assigned__c: Assigned__c
+    Building__c: Building__c
+    Course_Name__c: Course_Name__c
+    Department__c: Department__c
+    First_Name__c: First_Name__c
+    Gender__c: Gender__c
+    Last_Name__c: Last_Name__c
+    Location__c: Location__c
+    Max_Available__c: Max_Available__c
+    Preferred_Title__c: Preferred_Title__c
+    RecordTypeId: RecordTypeId
+    Time__c: Time__c
+    Undergrad_Major__c: Undergrad_Major__c
+  lookups:
+    Contact__c:
+      table: Contact
+    Event_Instance__c:
+      table: Summit_Events_Instance__c
 Insert Summit_Events_Registration__c:
   sf_object: Summit_Events_Registration__c
   table: Summit_Events_Registration__c
@@ -265,20 +338,18 @@ Insert Summit_Events_Registration__c:
     Campus_Tour_Location__c: Campus_Tour_Location__c
     Campus_Tour_Time__c: Campus_Tour_Time__c
     Confirmation_Call_Result__c: Confirmation_Call_Result__c
-    Contact_Soft_Match_Email__c: Contact_Soft_Match_Email__c
-    Contact_Soft_Match_First_Last_Zip__c: Contact_Soft_Match_First_Last_Zip__c
     Date_All_Appointments_Confirmed_del__c: Date_All_Appointments_Confirmed_del__c
-    Date__c: Date__c
     Display_Attendance_Publicly__c: Display_Attendance_Publicly__c
+    Event_Instance_Date_Time_Formatted__c: Event_Instance_Date_Time_Formatted__c
+    Event_Registration_Requested_Date__c: Event_Registration_Requested_Date__c
     Generated_Itinerary__c: Generated_Itinerary__c
     Generated_Requested_Appointments__c: Generated_Requested_Appointments__c
-    Instance__c: Instance__c
     Last_Name_as_Student__c: Last_Name_as_Student__c
     Matching_Log__c: Matching_Log__c
     New_Contact_Created__c: New_Contact_Created__c
     Number_of_Guests__c: Number_of_Guests__c
     Participation_Type__c: Participation_Type__c
-    Preferred_St_Thomas_Class_Year__c: Preferred_St_Thomas_Class_Year__c
+    Preferred_Class_Year__c: Preferred_Class_Year__c
     Preferred_Visit_Time__c: Preferred_Visit_Time__c
     Presentation_Location__c: Presentation_Location__c
     Presentation_Time__c: Presentation_Time__c
@@ -309,7 +380,6 @@ Insert Summit_Events_Registration__c:
     Registrant_Parent_First_Name__c: Registrant_Parent_First_Name__c
     Registrant_Parent_Last_Name__c: Registrant_Parent_Last_Name__c
     Registrant_Parent_Phone__c: Registrant_Parent_Phone__c
-    Registrant_Parent_Status__c: Registrant_Parent_Status__c
     Registrant_Phone__c: Registrant_Phone__c
     Registrant_Postal_Code__c: Registrant_Postal_Code__c
     Registrant_Preferred_First_Name__c: Registrant_Preferred_First_Name__c
@@ -320,8 +390,9 @@ Insert Summit_Events_Registration__c:
     Registrant_State__c: Registrant_State__c
     Registrant_Street_1__c: Registrant_Street_1__c
     Registrant_Street_2__c: Registrant_Street_2__c
+    Registrant_Third_Party_Status__c: Registrant_Third_Party_Status__c
     Registrant_Zip__c: Registrant_Zip__c
-    Relationship_to_St_Thomas__c: Relationship_to_St_Thomas__c
+    Relationship_To_Institution__c: Relationship_To_Institution__c
     Reminder_Call_Complete__c: Reminder_Call_Complete__c
     Session__c: Session__c
     Status__c: Status__c
@@ -333,56 +404,6 @@ Insert Summit_Events_Registration__c:
       table: Summit_Events_Instance__c
     Event__c:
       table: Summit_Events__c
-Insert Summit_Events_Host__c:
-  sf_object: Summit_Events_Host__c
-  table: Summit_Events_Host__c
-  fields:
-    Id: sf_id
-    Additional_Comments__c: Additional_Comments__c
-    Assigned__c: Assigned__c
-    Building__c: Building__c
-    Course_Name__c: Course_Name__c
-    Department__c: Department__c
-    First_Name__c: First_Name__c
-    Gender__c: Gender__c
-    Last_Name__c: Last_Name__c
-    Location__c: Location__c
-    Max_Available__c: Max_Available__c
-    Preferred_Title__c: Preferred_Title__c
-    RecordTypeId: RecordTypeId
-    Time__c: Time__c
-    Undergrad_Major__c: Undergrad_Major__c
-  lookups:
-    Contact__c:
-      table: Contact
-    Event_Instance__c:
-      table: Summit_Events_Instance__c
-Insert hed__Address__c:
-  sf_object: hed__Address__c
-  table: hed__Address__c
-  fields:
-    Id: sf_id
-    hed__Address_Type__c: hed__Address_Type__c
-    hed__Default_Address__c: hed__Default_Address__c
-    hed__Latest_End_Date__c: hed__Latest_End_Date__c
-    hed__Latest_Start_Date__c: hed__Latest_Start_Date__c
-    hed__MailingCity__c: hed__MailingCity__c
-    hed__MailingCountry__c: hed__MailingCountry__c
-    hed__MailingPostalCode__c: hed__MailingPostalCode__c
-    hed__MailingState__c: hed__MailingState__c
-    hed__MailingStreet2__c: hed__MailingStreet2__c
-    hed__MailingStreet__c: hed__MailingStreet__c
-    hed__Seasonal_End_Day__c: hed__Seasonal_End_Day__c
-    hed__Seasonal_End_Month__c: hed__Seasonal_End_Month__c
-    hed__Seasonal_End_Year__c: hed__Seasonal_End_Year__c
-    hed__Seasonal_Start_Day__c: hed__Seasonal_Start_Day__c
-    hed__Seasonal_Start_Month__c: hed__Seasonal_Start_Month__c
-    hed__Seasonal_Start_Year__c: hed__Seasonal_Start_Year__c
-  lookups:
-    hed__Parent_Account__c:
-      table: Account
-    hed__Parent_Contact__c:
-      table: Contact
 Insert Summit_Events_Appointments__c:
   sf_object: Summit_Events_Appointments__c
   table: Summit_Events_Appointments__c
@@ -406,7 +427,6 @@ Insert Summit_Events_Appointments__c:
     Description__c: Description__c
     Do_Not_Show_Time__c: Do_Not_Show_Time__c
     Faculty_Staff_Member__c: Faculty_Staff_Member__c
-    RecordTypeId: RecordTypeId
     Registrant_Input__c: Registrant_Input__c
     Room__c: Room__c
     Sort_Order__c: Sort_Order__c
@@ -417,20 +437,3 @@ Insert Summit_Events_Appointments__c:
       table: Summit_Events_Host__c
     Event_Registration__c:
       table: Summit_Events_Registration__c
-Insert hed__Trigger_Handler__c:
-  sf_object: hed__Trigger_Handler__c
-  table: hed__Language__c
-  fields:
-    Id: sf_id
-    Name: Name
-    hed__Active__c: hed__Active__c
-    Asynchronous: Asynchronous
-    hed__Class__c: hed__Class__c
-    hed__Filter_Field__c: hed__Filter_Field__c
-    hed__Filter_Value__c: hed__Filter_Value__c
-    hed__Load_Order__c: hed__Load_Order__c
-    hed__Object__c: hed__Object__c
-    hed__Owned_by_Namespace__c: hed__Owned_by_Namespace__c
-    hed__Trigger_Action__c: hed__Trigger_Action__c
-    hed__User_Managed__c: hed__User_Managed__c
-    hed__Usernames_to_Exclude__c: hed__Usernames_to_Exclude__c
