changed requested to registered for email status tests, fixed typo in cumulusci.yml for qa org

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -68,7 +68,7 @@ flows:
     config_qa:
         steps:
             3:
-                task: deploy_dev_event_recordv  s
+                task: deploy_dev_event_records
             4:
                 task: deploy_permission_set
             5:
