Mid work on full calendar implementation and not hosting the scripts for it.

--- a/orgs/release.json
+++ b/orgs/release.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "Summit Events - Release Test Org",
+  "orgName": "Summit Events Release",
   "edition": "Enterprise",
   "features": ["Sites"],
   "settings": {
