packaging json update trigger update

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "ver 0.11",
-            "versionNumber": "0.1.0.NEXT",
-            "definitionFile": "orgs/dev.json"
+            "versionNumber": "0.3.0.NEXT",
+            "definitionFile": "orgs/dev.json",
+            "ancestorId": "04t4P000002T5TrQAK"
         }
     ],
     "namespace": "summit",
@@ -14,6 +15,9 @@
     "sourceApiVersion": "48.0",
     "packageAliases": {
         "Summit Events App": "0Ho4P000000fxYiSAI",
-        "Summit Events App@0.1.0-2": "04t4P000002T5TrQAK"
+        "Summit Events App@0.1.0-2": "04t4P000002T5TrQAK",
+        "Summit Events App@0.2.0-1": "04t4P000002T5YiQAK",
+        "Summit Events App@0.2.0-2": "04t4P000002T5YnQAK",
+        "Summit Events App@0.3.0-1": "04t4P000002T5YsQAK"
     }
 }
