Fixed required additional questions not saving

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "ver 0.11",
-            "versionNumber": "0.5.0.NEXT",
+            "versionNumber": "0.5.1.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002T5ZCQA0"
+            "ancestorId": "04t4P000002T5ZHQA0"
         }
     ],
     "namespace": "summit",
@@ -15,6 +15,7 @@
     "sourceApiVersion": "48.0",
     "packageAliases": {
         "Summit Events App": "0Ho4P000000fxYiSAI",
-        "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0"
+        "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0",
+        "Summit Events App@0.5.0-1": "04t4P000002T5ZHQA0"
     }
 }
