package.json update

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -18,6 +18,7 @@
         "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0",
         "Summit Events App@0.5.0-1": "04t4P000002T5ZHQA0",
         "Summit Events App@0.6.0-1": "04t4P000002T5ZbQAK",
-        "Summit Events App@0.6.0-2": "04t4P000002T5ZgQAK"
+        "Summit Events App@0.6.0-2": "04t4P000002T5ZgQAK",
+        "Summit Events App@0.6.0-3": "04t4P000002T5ZlQAK"
     }
 }
