Added cookie encryption key to custom settings

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "ver 0.11",
-            "versionNumber": "0.9.0.NEXT",
+            "versionNumber": "0.10.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002T5fGQAS"
+            "ancestorId": "04t4P000002T5k7QAC"
         }
     ],
     "namespace": "summit",
@@ -23,6 +23,7 @@
         "Summit Events App@0.7.0-1": "04t4P000002T5aPQAS",
         "Summit Events App@0.8.0-1": "04t4P000002T5ayQAC",
         "Summit Events App@0.8.0-2": "04t4P000002T5fGQAS",
-        "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC"
+        "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC",
+        "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS"
     }
 }
