Added dataset for packaging org use. FIxed feed URL on calendar page. Added back virtual appt link.

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -24,6 +24,8 @@
         "Summit Events App@0.8.0-1": "04t4P000002T5ayQAC",
         "Summit Events App@0.8.0-2": "04t4P000002T5fGQAS",
         "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC",
-        "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS"
+        "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS",
+        "Summit Events App@0.10.0-2": "04t4P000002T5qfQAC",
+        "Summit Events App@0.10.0-3": "04t4P000002T5qkQAC"
     }
 }
