moved apex scripts into cumulusci.yml

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -29,22 +29,67 @@ tasks:
         description: Setup the Custom Settings for the Event Site
         class_path: cumulusci.tasks.apex.anon.AnonymousApexTask
         options:
-            path: scripts/configure_event_settings.cls
-            apex: setSiteURL();
+            apex: >
+                String siteName = 'Summit_Events';
+
+                Site site = [
+                        SELECT GuestUserId
+                        FROM Site
+                        WHERE Name = :siteName
+                ];
+
+                String path = '/sites/servlet.SiteDebugMode';
+                PageReference pr = new PageReference(path);
+                pr.getParameters().put('guid', site.GuestUserId);
+                pr.getParameters().put('sitedebugmode', 'x');
+                String url = pr.getContent().toString().substringAfter('URL=').substringBefore(path);
+
+                Summit_Events_Settings__c eventSettings = Summit_Events_Settings__c.getOrgDefaults();
+                eventSettings.Community_Base_URL__c = url;
+                eventSettings.Managed_Package__c = false;
+                upsert eventSettings;
 
     deploy_permission_set:
         description: Give System Admins Event Admin Permission Set
         class_path: cumulusci.tasks.apex.anon.AnonymousApexTask
         options:
-            path: scripts/configure_event_settings.cls
-            apex: addingAdminPermissionSet();
+            apex: >
+                List<PermissionSet> eventPermissionSets;
+                eventPermissionSets = [SELECT Name, Id FROM PermissionSet WHERE Name = 'Summit_Events_Admin'];
+
+                List<PermissionSetAssignment> permissionSetList = new List<PermissionSetAssignment>();
+                if (!eventPermissionSets.isEmpty()) {
+                    for (User u: [ SELECT ID FROM User WHERE Profile.Name = 'System Administrator' ]) {
+                                     permissionSetList.add(new PermissionSetAssignment(PermissionSetId = eventPermissionSets[0].Id, AssigneeId = u.Id));
+                    }
+                }
+                if (!permissionSetList.isEmpty()) {
+                    upsert permissionSetList;
+                }
 
     deploy_guest_permission_set:
         description: Give System Admins Event Admin Permission Set
         class_path: cumulusci.tasks.apex.anon.AnonymousApexTask
         options:
-            path: scripts/configure_event_settings.cls
-            apex: setGuestPermissionSet();
+            apex: >
+                String siteName = 'Summit_Events';
+
+                Site site = [
+                        SELECT GuestUserId
+                        FROM Site
+                        WHERE Name = :siteName
+                ];
+
+                List<PermissionSet> eventPermissionSets;
+                eventPermissionSets = [SELECT Name, Id FROM PermissionSet WHERE Name = 'Summit_Events_Registrant'];
+
+                List<PermissionSetAssignment> permissionSetList = new List<PermissionSetAssignment>();
+                if (!eventPermissionSets.isEmpty()) {
+                        permissionSetList.add(new PermissionSetAssignment(PermissionSetId = eventPermissionSets[0].Id, AssigneeId = site.GuestUserId));
+                }
+                if (!permissionSetList.isEmpty()) {
+                    upsert permissionSetList;
+                }
 
     deploy_dev_event_records:
         description: Configure sample records for the Event app
