namespace in return url missing causing confusing and delay

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,10 +4,10 @@
             "path": "force-app",
             "default": true,
             "package": "Summit Events App",
-            "versionName": "May 2021",
-            "versionNumber": "0.16.0.NEXT",
+            "versionName": "June 2021",
+            "versionNumber": "0.17.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002fPbQQAU"
+            "ancestorId": "04t4P000002fPbuQAE"
         }
     ],
     "namespace": "summit",
@@ -30,6 +30,7 @@
         "Summit Events App@0.13.0-1": "04t4P000002T62MQAS",
         "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2",
         "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU",
-        "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE"
+        "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE",
+        "Summit Events App@0.17.0-1": "04t4P000002fPkoQAE"
     }
 }
