fixed ancestry and version number to package

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "June 2021",
-            "versionNumber": "0.17.0.NEXT",
+            "versionNumber": "0.19.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002fPbuQAE"
+            "ancestorId": "04t4P000002fPktQAE"
         }
     ],
     "namespace": "summit",
@@ -30,6 +30,9 @@
         "Summit Events App@0.13.0-1": "04t4P000002T62MQAS",
         "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2",
         "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU",
-        "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE"
+        "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE",
+        "Summit Events App@0.17.0-3": "04t4P000002fPkyQAE",
+        "Summit Events App@0.18.0-1": "04t4P000002fPl3QAE",
+        "Summit Events App@0.19.0-1": "04t4P000002fPl8QAE"
     }
 }
