Added Account sharing rule and fake school data for lookup question testing

--- a/unpackaged/config/sharing/package.xml
+++ b/unpackaged/config/sharing/package.xml
@@ -4,5 +4,9 @@
         <members>Summit_Events__c</members>
         <name>SharingRules</name>
     </types>
+    <types>
+        <members>Account</members>
+        <name>SharingRules</name>
+    </types>
     <version>51.0</version>
 </Package>
